--- a/styles.css
+++ b/styles.css
@@ -86,63 +86,157 @@ html {
     color: #ffffff;
 }
 
-.hamburger {
+.sidebar {
+
+    width: 100%;
+    height: 100vh;
+    background: #24276A;
+    text-align: left;
+    font-size: 20px;
+    transform: rotate3d(0, 1, 0, 90deg);
+    transform-origin: left center;
+    transition: .5s;
+}
+
+.sidebar.open {
+    transform: rotate3d(0, 0, 1, 0deg);
+}
+.sidebar ul{
+    list-style: none;
+}
+
+.sidebar li:hover,
+.sidebar li.active {
+    background: #0000003f;
+}
+
+.sidebar li a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
+    display: block
+}
+
+.toggler-navbar {
     display: none;
+}
+
+.hamburger-menu {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
     cursor: pointer;
-    font-size: 30px;
-    flex-direction: column;
-
 }
 
-.burger-img{
-    max-height: 30px;
-    max-width: 40px;
+.hamburger-menu span {
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    background: #B7B8CE;
+    border-radius: 6px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
 }
+
+.hamburger-menu span:nth-child(1) {
+    top: 2.5px;
+}
+
+.hamburger-menu span:nth-child(2) {
+    top: 11px;
+}
+
+.hamburger-menu span:nth-child(3) {
+    top: 21px;
+}
+
+.hamburger-menu.open span:nth-child(1) {
+    top: 15px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+}
+
+.hamburger-menu.open span:nth-child(2) {
+    opacity: 0;
+    left: -60px;
+}
+
+.hamburger-menu.open span:nth-child(3) {
+    top: 14px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+}
+
+
 
 /* Mobile styles */
 @media (max-width: 600px) {
-    .header nav ul li { 
-        display: none; 
-    }
-    .header nav ul li.hamburger {
-        display: block;
-    }
     .nav-items { 
         display: none; 
     }
-    .hamburger {
+    .toggler-navbar {
         display: block;
+        cursor: pointer;
     }
 }
 
+
+.footer-side-bar{
+    font-family: Arial, sans-serif;   
+    font-size: 10px;
+    color: rgb(233, 233, 240);
+}
+
+.sidebar-elements{
+    padding-top: 8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: left;
+    gap:50px;
+    
+}
+
 /* Tablet styles */
-@media (min-width: 601px) and (max-width: 1024px) {
-    .header nav ul li { 
-        display: none; 
-    }
-    .header nav ul li.hamburger {
-        display: block;
-    }
+@media (min-width: 601px) and (max-width: 1024px) { 
     .nav-items { 
         display: none; 
     }
-    .hamburger {
+    .toggler-navbar {
         display: block;
+        cursor: pointer;
     }
 }
 
 /* Desktop styles */
 @media (min-width: 1025px) {
-    .header nav ul li { 
-        display: inline-block; 
-    }
-    .header nav ul li.hamburger {
-        display: none;
-    }
+    
     .nav-items { 
         display: flex; 
     }
-    .hamburger {
+    .toggler-navbar {
         display: none;
     }
 }
+
