--- a/styles.css
+++ b/styles.css
@@ -122,70 +122,23 @@ html {
 }
 
 .hamburger-menu {
-    display: flex;
-    width: 30px;
-    height: 30px;
+    width: 25px;
     position: relative;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .5s ease-in-out;
-    -moz-transition: .5s ease-in-out;
-    -o-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
     cursor: pointer;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
 }
 
-.hamburger-menu span {
-    position: absolute;
+span {
+    display: block;
     height: 2px;
     width: 100%;
     background: #B7B8CE;
-    border-radius: 6px;
     opacity: 1;
     left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-}
-
-.hamburger-menu span:nth-child(1) {
-    top: 2.5px;
-}
-
-.hamburger-menu span:nth-child(2) {
-    top: 11px;
-}
-
-.hamburger-menu span:nth-child(3) {
-    top: 21px;
-}
-
-.hamburger-menu.open span:nth-child(1) {
-    top: 15px;
-    -webkit-transform: rotate(135deg);
-    -moz-transform: rotate(135deg);
-    -o-transform: rotate(135deg);
-    transform: rotate(135deg);
-}
-
-.hamburger-menu.open span:nth-child(2) {
-    opacity: 0;
-    left: -60px;
-}
-
-.hamburger-menu.open span:nth-child(3) {
-    top: 14px;
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-    transform: rotate(-135deg);
+    transition: all .3s;
+    position: relative;
 }
 
 
@@ -240,3 +193,121 @@ html {
     }
 }
 
+
+span + span {
+    margin-top: 7px;
+  }
+  
+  .active span:nth-child(1) {
+    animation: ease .7s top forwards;
+    background: #ffffff;
+    height: 1px;
+    width: 22px;
+  }
+  
+  .not-active span:nth-child(1) {
+    animation: ease .7s top-2 forwards;
+  }
+  
+  .active span:nth-child(2) {
+    animation: ease .7s scaled forwards;
+  }
+  
+  .not-active span:nth-child(2) {
+    animation: ease .7s scaled-2 forwards;
+  }
+  
+  .active span:nth-child(3) {
+    animation: ease .7s bottom forwards;
+    background: #ffffff;
+    height: 1px;
+    width: 22px;
+  }
+  
+  .not-active span:nth-child(3) {
+    animation: ease .7s bottom-2 forwards;
+  }
+  
+  @keyframes top {
+    0% {
+        top: 0;
+        transform: rotate(0);
+    }
+    50% {
+        top: 7px;
+        transform: rotate(0);
+    }
+    100% {
+        top: 7px;
+        transform: rotate(45deg);
+    }
+}
+
+@keyframes top-2 {
+    0% {
+        top: 7px;
+        transform: rotate(45deg);
+    }
+    50% {
+        top: 7px;
+        transform: rotate(0deg);
+    }
+    100% {
+        top: 0;
+        transform: rotate(0deg);
+    }
+}
+
+@keyframes bottom {
+    0% {
+        bottom: 0;
+        transform: rotate(0);
+    }
+    50% {
+        bottom: 10px;
+        transform: rotate(0);
+    }
+    100% {
+        bottom: 10px;
+        transform: rotate(-45deg);
+    }
+}
+
+@keyframes bottom-2 {
+    0% {
+        bottom: 10px;
+        transform: rotate(-55deg);
+    }
+    50% {
+        bottom: 10px;
+        transform: rotate(0);
+    }
+    100% {
+        bottom: 0;
+        transform: rotate(0);
+    }
+}
+
+@keyframes scaled {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(0);
+    }
+}
+
+@keyframes scaled-2 {
+    0% {
+        transform: scale(0);
+    }
+    50% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
